# src/main/kotlin/com/example/project/presentation/controller/material/MaterialController.kt
@@ -1,0 +1,7 @@
+package com.example.project.presentation.controller.material
+
+import com.example.project.presentation.response.material.GetMaterialUnitsResponse
+
+interface MaterialController {
+  fun getMaterialUnits(): GetMaterialUnitsResponse
+}
